# go2_visionpro_teleop

./: .gitignore  README.md  build_and_install.sh  pyproject.toml
Go2 Teleop/: AccessoryTrackingManager.swift  App.swift  CombinedStreamingView.swift  ContentView.swift  ExtrinsicCalibrationManager.swift  GRPCServer.swift  ImmersiveView.swift  PersonaCaptureController.swift  RecordingManager.swift  SignalingClient.swift  StatusView.swift  UVCCameraManager.swift  WebRTCClient.swift  🥽AppModel.swift
Go2 Teleop.xcodeproj/: project.pbxproj
Go2 Teleop.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Go2 Teleop.xcodeproj/xcshareddata/xcschemes/: Go2 Teleop.xcscheme  Tracking Viewer.xcscheme
Go2 Teleop/MuJoCo/: MuJoCoGRPCServer.swift
Go2 Teleop/OpenCV/: OpenCVWrapper.mm
Go2 Teleop/Proto/: handtracking.pb.swift
Go2 Teleop/Supporting files/: InfoPlist.xcstrings  Localizable.xcstrings
Tracking Streamer/: App.swift  CameraCalibrationManager.swift  ContentView.swift  CustomImageStorage.swift  ImmersiveView.swift  RecordingManager.swift  StatusView.swift  WebRTCClient.swift  🥽AppModel.swift
Tracking Streamer.xcodeproj/: project.pbxproj
Tracking Streamer/Supporting files/: Info.plist
avp_stream/: streamer.py
docs/: how_to_install.md
go2_teleop/: __init__.py  app.py  config.py  hand_mapping.py  main.py  renderer.py  simulator.py  swift_bridge.py  unitree_bridge.py
ros2_ws/: notes.MD
ros2_ws/src/teleoperation/: CMakeLists.txt  README.md  notes.md  package.xml  setup.py
visionos_app/: README.md
visionos_app/Go2TeleopVision/: Package.swift  README.md  project.yml
(+31 files in other folders)
