[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go2-teleop"
version = "0.1.0"
description = "Vision Pro hand-tracking bridge for Unitree Go2 teleoperation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "websockets>=12.0",
]

[project.optional-dependencies]
avp = ["avp_stream>=2.50.0"]

[project.scripts]
go2-teleop = "go2_teleop.main:main"

[tool.setuptools.packages.find]
include = ["go2_teleop*"]
